
    HADOOP-12164. Fix TestMove and TestFsShellReturnCode failed to get command
    name using reflection. (Lei (Eddy) Xu)

    HADOOP-12117. Potential NPE from Configuration#loadProperty with
    allowNullValueProperties set. (zhihai xu via vinayakumarb)

    HADOOP-12200. TestCryptoStreamsWithOpensslAesCtrCryptoCodec should be
    skipped in non-native profile. (Masatake Iwasaki via aajisaka)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12186. ActiveStandbyElector shouldn't call monitorLockNodeAsync
    multiple times (zhihai xu via vinayakumarb)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12103. Small refactoring of DelegationTokenAuthenticationFilter to
    allow code sharing. (Yongjun Zhang)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

    HADOOP-9658. SnappyCodec#checkNativeCodeLoaded may unexpectedly fail when
    native code is not loaded. (Zhijie Shen via ozawa)

    HADOOP-11663. Remove description about Java 6 from docs.
    (Masatake Iwasaki via aajisaka)

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed
    through hadoop-daemon.sh. (cnauroth)

    HADOOP-11973. Ensure ZkDelegationTokenSecretManager namespace znodes get
    created with ACLs. (Gregory Chanan via asuresh)
